# Dodepan

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h  custom.ld  demuxer.c  demuxer.h  imu.c  imu.h  instrument_preset.h  looper.c  looper.h  main.c  main.cpp  memmap_custom.ld  scales.h  state.c  state.h  tof.cpp  tof.h  touch.c  touch.h
display/: display.c  display.h  display_fonts.h  display_strings.h  icon_bar.h  icon_close.h  icon_contrast_max.h  icon_contrast_med.h  icon_contrast_min.h  icon_gyro_off.h  icon_gyro_on_x.h  icon_gyro_on_x_y.h  icon_gyro_on_y.h  icon_imu_off.h  icon_imu_on_x.h  icon_imu_on_x_y.h  icon_imu_on_y.h  icon_looper.h  icon_low_batt.h  icon_off.h  icon_on_x.h  icon_on_x_y.h  icon_on_y.h  icon_parameters.h  icon_pause.h  icon_play.h  icon_ready.h  icon_rec.h  icon_replay.h  icon_transpose.h  intro.h  intro_frames.h
hardware/PCB/: Dodepan_PCB_THT.kicad_pro-B_Cu.gbr  Dodepan_PCB_THT.kicad_pro-B_Mask.gbr  Dodepan_PCB_THT.kicad_pro-B_Paste.gbr  Dodepan_PCB_THT.kicad_pro-Edge_Cuts.gbr  Dodepan_PCB_THT.kicad_pro-F_Cu.gbr  Dodepan_PCB_THT.kicad_pro-F_Mask.gbr  Dodepan_PCB_THT.kicad_pro-F_Paste.gbr  Dodepan_PCB_THT.kicad_pro-F_Silkscreen.gbr  Dodepan_PCB_THT.kicad_pro-NPTH.drl  Dodepan_PCB_THT.kicad_pro-PTH.drl
hardware/assembly guide/: README.md
hardware/enclosure/: Enclosure_PCB.scad  Enclosure_PCB.stl  Enclosure_handwired.scad  Enclosure_handwired.stl  Encoder knob.scad  Encoder knob.stl  Lid.scad  Lid.stl  OLED bracket.scad  OLED bracket.stl  README.md  Standoff peg.scad  Standoff peg.stl  logo.dxf
inc/tinyusb-midi/: tusb_config.h  usb_descriptors.c
lib/RingBufMax/: CMakeLists.txt  RingBufMax.c  RingBufMax.h
lib/sound_i2s/: CMakeLists.txt  LICENSE  sound_i2s.c  sound_i2s.h  sound_i2s_16bits.pio
lib/tinyusb-midi/: tusb_config.h  usb_descriptors.c
samples/: note100.h  note101.h  note102.h  note103.h  note104.h  note105.h  note106.h  note107.h  note108.h  note109.h  note110.h  note36.h  note37.h  note38.h  note39.h  note40.h  note41.h  note42.h  note43.h  note44.h  note45.h  note46.h  note47.h  note48.h  note49.h  note50.h  note51.h  note52.h  note53.h  note54.h  note55.h  note56.h  note57.h  note58.h  note59.h  note60.h  note61.h  note62.h  note63.h  note64.h  (+36 more)
